--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "src/glfw"]
 	path = src/glfw
 	url = https://github.com/IlyaShurupov/glfw.git
+[submodule "src\\Types"]
+	path = src\\Types
+	url = https://github.com/IlyaShurupov/Types.git
