--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,9 @@
 [submodule "src/sci"]
 	path = src/sci
 	url = https://github.com/IlyaShurupov/sci.git
+[submodule "src/Objects"]
+	path = src/Objects
+	url = https://github.com/IlyaShurupov/Objects.git
+[submodule "src/Nodes-new"]
+	path = src/Nodes-new
+	url = https://github.com/IlyaShurupov/Nodes-new.git
